@@ -507,7 +507,7 @@ reserved:	ZEROS=ZERO
 
 
 not-register:	DIALECT-ALL	# disable all registers, specify used below
-#register:	"ADDRESS\ OF"	# not yet handled as register in GnuCOBOL
+register:	"ADDRESS\ OF"	# not yet handled as register in GnuCOBOL
 #register:	"DEBUG-ITEM"	# not yet handled as register in GnuCOBOL
 #register:	"LINAGE-COUNTER"	# not yet handled as register in GnuCOBOL
 #register:	"LINE-COUNTER"	# not yet handled as register in GnuCOBOL
