@@ -197,3 +197,5 @@ reserved-words:		IBM
 
 not-register:	COB-CRT-STATUS
 not-register:	NUMBER-OF-CALL-PARAMETERS
+register:		TALLY
+register:		SORT-RETURN
