@@ -198,3 +198,5 @@ reserved-words:		MVS
 
 not-register:	COB-CRT-STATUS
 not-register:	NUMBER-OF-CALL-PARAMETERS
+register:		TALLY
+register:		SORT-RETURN
