@@ -4,6 +4,9 @@
 	* parser.y: only allow RETURNING/GIVING in EXIT PROGRAM/GOBACK
 	  if RETURN-CODE register is not disabled; always return 0 on
 	  STOP RUN if no RETURN-CODE register is available
+	* reserved.c, tree.h: new functions cb_register_list_get_first and
+	  cb_register_list_get_next for iterating through all active registers
+	* typeck.c: modularize register creation
 
 2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
